Fix Admin sidenav too tall on mobile

--- a/app/assets/stylesheets/admin/body.sass
+++ b/app/assets/stylesheets/admin/body.sass
@@ -1,5 +1,9 @@
+html
+  height: 100%
+  overflow: auto
+
 body
-  min-height: 100vh
+  min-height: 100%
   .main
     flex-grow: 1
     flex-direction: column
