--- a/app/assets/stylesheets/application/body.sass
+++ b/app/assets/stylesheets/application/body.sass
@@ -1,5 +1,9 @@
+html
+  height: 100%
+  overflow: auto
+
 body
-  min-height: 100vh
+  min-height: 100%
   flex-direction: column
   background-color: var(--l4n-bg-color)
   color: var(--l4n-text-color)
